syntax = "proto3";

package sapphillon.v1;
import "google/protobuf/timestamp.proto";
import "sapphillon/v1/permission.proto";

enum WorkflowLanguage {
    WORKFLOW_JAVASCRIPT = 0;
    WORKFLOW_TYPESCRIPT = 1;
}

message WorkflowCode {
    string id = 1;
    int code_revision = 2;
    string code = 3;
    WorkflowLanguage language = 4;
    google.protobuf.Timestamp created_at = 5;
    optional string result = 6;
    optional repeated sapphillon.v1.Permission required_permissions = 7;
}

message WorkflowResult {
    string id = 1;
    string display_name = 2;
    string description = 3;
    string result = 4; // The result of the workflow execution
    google.protobuf.Timestamp ran_at = 5;
}

message Workflow {
    string id = 1;
    string display_name = 2;
    string description = 3;
    WorkflowLanguage workflow_language = 4;
    repeated WorkflowCode workflow_code = 5;
    google.protobuf.Timestamp created_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    repeated WorkflowResult workflow_results = 8;
}